--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -19,3 +19,35 @@ body {
   width: $container-width;
   margin: 0 auto;
 }
+
+.content {
+  padding: 40px 0;
+
+  &__top {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+
+  &__title {
+    display: inline-block;
+    margin: 30px 0;
+    color: $dark-font;
+
+    &::after {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 8px;
+      background-color: $orange;
+      border-radius: 4px;
+      margin-top: 5px;
+    }
+  }
+
+  &__items {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
