feat(sorting): implement the logic for displaying the popup and its elements

--- a/client/src/scss/components/_sorting.scss
+++ b/client/src/scss/components/_sorting.scss
@@ -7,6 +7,13 @@
 
     &-title {
       margin-right: 10px;
+
+      & span {
+        color: $orange;
+        font-weight: bold;
+        cursor: pointer;
+        text-decoration: underline;
+      } 
     }
   }
 
