feat(main): create basic structure of Main page

--- a/client/src/scss/components/card.scss
+++ b/client/src/scss/components/card.scss
@@ -47,7 +47,7 @@
         }
       }
 
-      .availability {
+      .variants {
         display: flex;
         justify-content: space-between;
         color: $white;
