feat(card): display content from database

--- a/client/src/scss/components/card.scss
+++ b/client/src/scss/components/card.scss
@@ -110,8 +110,12 @@
     color: $dark-font;
   }
 
-  &__description {
+  &__components {
     padding: 0 10px 10px;
+
+    & span:not(:last-child)::after {
+      content: ', '
+    }
   }
 
   &__weight-switcher {
