--- a/client/src/scss/components/card.scss
+++ b/client/src/scss/components/card.scss
@@ -2,7 +2,8 @@
   width: 288px;
   background-color: $white;
   border-radius: 10px;
-  margin-bottom: 20px;
+  margin: 0 10px 20px;
+  
 
   &:hover {
     box-shadow: 0px 5px 15px $black;
@@ -31,14 +32,16 @@
       .title {
         min-height: 65px;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
   
         &__text {
           align-self: flex-end;
           font-family: "Lugrasimo", cursive;
           color: $dark-font;
-          font-size: 36px;
+          font-size: 26px;
+          text-align: right;
+          padding-right: 5px;
         }
   
         &__icon {
