--- a/client/src/components/Categories/Categories.module.scss
+++ b/client/src/components/Categories/Categories.module.scss
@@ -1,10 +1,12 @@
-.categories {
-  ul {
-    display: flex;
-    flex-wrap: wrap;
+@import '../../scss/all';
 
-    li {
-      background-color: $bg-btn;
+.list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.item {
+  background-color: $bg-btn;
       color: $dark-font;
       padding: 15px 30px;
       border-radius: 30px;
@@ -13,7 +15,6 @@
       font-weight: bold;
       cursor: pointer;
       transition: background-color 0.2s ease-in-out;
-      @include noselect();
 
       &:hover {
         background-color: darken($bg-btn, 5%);
@@ -27,6 +28,5 @@
         background-color: $bg-btn-active;
         color: $white;
       }
-    }
-  }
 }
+
