--- a/client/src/scss/libs/_normalize.scss
+++ b/client/src/scss/libs/_normalize.scss
@@ -1,3 +1,5 @@
+@import '../utils/variables';
+
 * {
   padding: 0;
   margin: 0;
@@ -16,6 +18,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   color: $black;
+  background-color: $bg;
 }
 
 a,
@@ -42,13 +45,4 @@ h2 {
 
 a {
   text-decoration: none;
-}
-
-@mixin noselect {
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
-  -moz-user-select: none; /* Old versions of Firefox */
-  -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
 }
