feat(modalWindow): add displaying ModalWindow

--- a/client/src/scss/utils/_variables.scss
+++ b/client/src/scss/utils/_variables.scss
@@ -3,6 +3,7 @@ $container-width: 90%;
 $bg:rgba(35, 33, 22, 0.7);
 $bg-btn: #f9f9f9;
 $bg-btn-active: #282828;
+$bg-modal-window: rgba(0, 0, 0, 0.4);
 
 $black: #000;
 $white: #fff;
