--- a/client/src/pages/Main/ModalWindow/ModalWindow.module.scss
+++ b/client/src/pages/Main/ModalWindow/ModalWindow.module.scss
@@ -82,4 +82,29 @@
     padding: 0 15px;
     margin: 10px 0;
   }
+
+  hr {
+    width: 90%;
+    background-color: $gray-light;
+    margin: 0 auto 10px;
+  }
+}
+
+.ingredient__list {
+  padding: 0 15px;
+}
+
+.ingredient__list__item {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0;
+}
+
+.ingredient__content {
+  display: flex;
+  align-items: center;
+
+  span {
+    padding-left: 10px;
+  }
 }
