feat(counter): make a layout for the counter

--- a/client/src/scss/utils/_variables.scss
+++ b/client/src/scss/utils/_variables.scss
@@ -12,6 +12,8 @@ $pink-light: #f17172;
 $orange: #df9408;
 $gray-light:#d0d0d0;
 $gray-dark: #323232;
+$green-light: #33d51e;
+$green-dark: #198d09;
 
 $first-weight-price-box: #d31010;
 $second-weight-price-box: #f1c707;
