--- a/client/src/components/Sorting/Sorting.module.scss
+++ b/client/src/components/Sorting/Sorting.module.scss
@@ -2,7 +2,7 @@
 
 .container {
   position: relative;
-  width: 280px;
+  flex: 1 0 300px;
 }
 
 .top {
@@ -11,12 +11,12 @@
 }
 
 .title {
-  width: 100%;
   margin-right: 10px;
   display: flex;
   justify-content: space-between;
 
   & .criterion{
+    padding-left: 10px;
     color: $orange;
     font-weight: bold;
     cursor: pointer;
