--- a/client/src/components/Card/Card.module.scss
+++ b/client/src/components/Card/Card.module.scss
@@ -4,10 +4,13 @@
   width: 288px;
   background-color: $white;
   border-radius: 10px;
-  margin: 0 10px 20px;
 
   &:hover {
     box-shadow: 0px 5px 15px $black;
+  }
+
+  @media (max-width: 580px) {
+    width: 100%;
   }
 }
 
@@ -20,6 +23,7 @@
 .image {
   display: block;
   width: 288px;
+  border-radius: 10px 10px 0 0;
 }
 
 .info {
@@ -46,6 +50,10 @@
     font-size: 26px;
     text-align: right;
     padding-right: 5px;
+
+    @media (max-width: 430px) {
+      font-size: 22px;
+    }
   }
 
   &__icon {
