--- a/client/src/components/Categories/Categories.module.scss
+++ b/client/src/components/Categories/Categories.module.scss
@@ -3,24 +3,40 @@
 .list {
   display: flex;
   flex-wrap: wrap;
+
+  @media (max-width: 768px) {
+    flex-wrap: nowrap;
+    width: 100%;
+    overflow-x: auto;
+
+    &::-webkit-scrollbar {
+      height: 4px;
+    }
+  
+    &::-webkit-scrollbar-thumb {
+      border-radius: 2px;
+      background: $pink;
+    }
+  }
 }
 
 .item {
   background-color: $bg-btn;
-      color: $dark-font;
-      padding: 15px 30px;
-      border-radius: 30px;
-      margin-right: 10px;
-      margin-bottom: 10px;
-      font-weight: bold;
-      cursor: pointer;
-      transition: background-color 0.2s ease-in-out;
+  color: $dark-font;
+  padding: 15px 30px;
+  border-radius: 30px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+  white-space: nowrap;
 
-      &:hover {
-        background-color: darken($bg-btn, 5%);
-      }
+  &:hover {
+    background-color: darken($bg-btn, 5%);
+  }
 
-      &:active {
+  &:active {
         background-color: darken($bg-btn, 8%);
       }
 
