--- a/client/src/components/Price/Price.module.scss
+++ b/client/src/components/Price/Price.module.scss
@@ -4,10 +4,18 @@
   color: $white;
   font-weight: bold;
   font-size: 22px;
+
+  @media (max-width: 430px) {
+    font-size: 20px;
+  }
 }
 
 .kopecks {
   font-size: 12px;
+
+  @media (max-width: 430px) {
+    font-size: 11px;
+  }
 }
 
 .currency {
@@ -18,12 +26,20 @@
   color: $dark-font;
   font-weight: bold;
   font-size: 28px;
+
+  @media (max-width: 430px) {
+    font-size: 24px;
+  }
 }
 
 .kop {
   color: $dark-font;
   font-size: 16px;
   margin-left: 2px;
+
+  @media (max-width: 430px) {
+    font-size: 14px;
+  }
 }
 
 .cur {
@@ -33,4 +49,8 @@
   position: absolute;
   right: -22px;
   bottom: -7px;
+
+  @media (max-width: 430px) {
+    font-size: 12px;
+  }
 }
