--- a/client/src/pages/Main/Main.module.scss
+++ b/client/src/pages/Main/Main.module.scss
@@ -1,9 +1,17 @@
 @import '../../scss/all';
 
+.root {
+  margin-bottom: 20px;
+}
+
 .top {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+
+  @media (max-width: 1130px) {
+    flex-direction: column;
+  }
 }
 
 .title {
@@ -23,8 +31,22 @@
 }
 
 .items {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 0 -10px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 10px;
+  grid-row-gap: 20px;
+  justify-items: center;
+
+  @media (max-width: 1400px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  @media (max-width: 1100px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media (max-width: 768px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
