feat(header): create response design for header

--- a/client/src/App.module.scss
+++ b/client/src/App.module.scss
@@ -10,6 +10,10 @@
 }
 
 .container {
-  width: $container-width;
+  width: 90%;
   margin: 0 auto;
+
+  @media (max-width: 468px) {
+    width: 95%;
+  }
 }
