--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -15,6 +15,18 @@
 
   &__img {
     margin-right: 15px;
+
+    @media (max-width: 560px) {
+      width: 60px;
+      height: 60px;
+      margin-right: 10px;
+    }
+
+    @media (max-width: 468px) {
+      width: 40px;
+      height: 40px;
+      margin-right: 5px;
+    }
   }
 
   &__title {
@@ -22,12 +34,29 @@
     color: $dark-font;
     font-size: 36px;
     text-transform: uppercase;
+
+    @media (max-width: 560px) {
+      font-size: 28px;
+    }
+
+    @media (max-width: 468px) {
+      font-size: 18px;
+    }
   }
 
   &__subtitle {
     font-family: "Pacifico", cursive;
     color: $gray-font;
     font-size: 14px;
+
+    @media (max-width: 468px) {
+      font-size: 12px;
+      line-height: 14px;
+    }
+
+    @media (max-width: 380px) {
+      display: none;
+    }
   }
 }
 
@@ -37,6 +66,10 @@
     min-width: 100px;
     text-align: center;
     position: relative;
+
+    @media (max-width: 468px) {
+      min-width: 70px;
+    }
   }
 
   &__price {
@@ -45,6 +78,20 @@
     left: 0;
     font-weight: bold;
     color: $pink;
+
+    @media (max-width: 468px) {
+      font-size: 14px;
+    }
+  }
+
+  &__icon {
+    width: 40px;
+    height: 40px;
+
+    @media (max-width: 468px) {
+      width: 30px;
+      height: 30px;
+    }
   }
 
   &__circle {
@@ -57,9 +104,21 @@
     background-color: $pink;
     text-align: center;
 
+    @media (max-width: 468px) {
+      width: 20px;
+      height: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
     span {
       color: $white;
       font-size: 12px;
+
+      @media (max-width: 468px) {
+        font-size: 10px;
+      }
     }
   }
 }
