--- a/client/src/components/Categories/Categories.module.scss
+++ b/client/src/components/Categories/Categories.module.scss
@@ -18,6 +18,14 @@
       background: $pink;
     }
   }
+
+  @media (max-width: 668px) {
+    margin-bottom: 10px;
+
+    &::-webkit-scrollbar {
+      height: 2px;
+    }
+  }
 }
 
 .item {
@@ -31,6 +39,16 @@
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
   white-space: nowrap;
+
+  @media (max-width: 668px) {
+    padding: 10px 20px;
+    font-size: 14px;
+  }
+
+  @media (max-width: 460px) {
+    padding: 7px 10px;
+    font-size: 12px;
+  }
 
   &:hover {
     background-color: darken($bg-btn, 5%);
