--- a/client/src/components/Card/Card.module.scss
+++ b/client/src/components/Card/Card.module.scss
@@ -15,7 +15,6 @@
 }
 
 .top {
-  height: 200px;
   overflow: hidden;
   position: relative;
 }
@@ -24,6 +23,10 @@
   display: block;
   width: 288px;
   border-radius: 10px 10px 0 0;
+
+  @media (max-width: 430px) {
+    width: 200px;
+  }
 }
 
 .info {
@@ -51,8 +54,14 @@
     text-align: right;
     padding-right: 5px;
 
-    @media (max-width: 430px) {
+    @media (max-width: 468px) {
+      width: 70%;
+      white-space: wrap;
       font-size: 22px;
+    }
+
+    @media (max-width: 390px) {
+      font-size: 18px;
     }
   }
 
@@ -66,10 +75,23 @@
   text-align: center;
   padding: 10px;
   color: $dark-font;
+
+  @media (max-width: 390px) {
+    font-size: 16px;
+    padding: 5px;
+  }
 }
 
 .components {
   padding: 0 10px 10px;
+
+  @media (max-width: 468px) {
+    font-size: 14px;
+  }
+
+  @media (max-width: 390px) {
+    font-size: 12px;
+  }
 
   & span:not(:last-child)::after {
     content: ', '
