--- a/client/src/pages/Main/Main.module.scss
+++ b/client/src/pages/Main/Main.module.scss
@@ -19,6 +19,18 @@
   margin: 30px 0 50px;
   color: $dark-font;
 
+  @media (max-width: 740px) {
+    font-size: 24px;
+    line-height: 28px;
+    margin: 25px 0 40px;
+  }
+
+  @media (max-width: 468px) {
+    font-size: 20px;
+    line-height: 22px;
+    margin: 25px 0;
+  }
+
   &::after {
     content: '';
     display: block;
@@ -27,6 +39,14 @@
     background-color: $orange;
     border-radius: 4px;
     margin-top: 5px;
+
+    @media (max-width: 740px) {
+      height: 6px;
+    }
+
+    @media (max-width: 468px) {
+      height: 4px;
+    }
   }
 }
 
