--- a/client/src/components/Footer/Footer.module.scss
+++ b/client/src/components/Footer/Footer.module.scss
@@ -3,6 +3,14 @@
 .root {
   background-color: $orange;
   padding: 30px 0;
+
+  @media (max-width: 768px) {
+    padding: 20px 0;
+  }
+
+  @media (max-width: 560px) {
+    padding: 15px 0;
+  }
 }
 
 .container {
@@ -10,18 +18,40 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
+
+  @media (max-width: 560px) {
+    flex-direction: column-reverse;
+  }
   
 }
 
 .copy {
   color: $white;
+
+  @media (max-width: 390px) {
+    font-size: 14px;
+  }
 }
 
 .contacts {
+  @media (max-width: 768px) {
+    display: flex;
+    flex-direction: column;
+  }
+
   a {
     color: darken($white, 10%);
     cursor: pointer;
     margin-left: 20px;
+    margin-bottom: 10px;
+
+    @media (max-width: 768px) {
+      margin-left: 0;
+    }
+
+    @media (max-width: 390px) {
+      font-size: 14px;
+    }
 
     &:hover {
       color: $white;
