--- a/client/src/pages/Main/ModalWindow/ComponentList/ComponentList.module.scss
+++ b/client/src/pages/Main/ModalWindow/ComponentList/ComponentList.module.scss
@@ -2,24 +2,23 @@
 
 .title {
   font-weight: bold;
-  padding: 0 15px;
   margin: 10px 0;
 }
 
 .line {
-  width: 90%;
+  width: 100%;
   background-color: $gray-light;
   margin: 0 auto 10px;
-}
-
-.list {
-  padding: 0 15px;
 }
 
 .list__item {
   display: flex;
   justify-content: space-between;
   margin: 10px 0;
+
+  @media (max-width: 668px) {
+    font-size: 14px;
+  }
 }
 
 .content {
@@ -29,9 +28,18 @@
   img {
     width: 40px;
     height: 40px;
+
+    @media (max-width: 668px) {
+      width: 35px;
+      height: 35px;
+    }
   }
 
   span {
     padding-left: 10px;
+
+    @media (max-width: 668px) {
+      padding-left: 5px;
+    }
   }
 }
