--- a/client/src/pages/Main/ModalWindow/ModalWindow.module.scss
+++ b/client/src/pages/Main/ModalWindow/ModalWindow.module.scss
@@ -25,6 +25,19 @@
   background-color: $white;
   border-radius: 13px;
   position: relative;
+
+  @media (max-width: 668px) {
+    max-width: 350px;
+  }
+
+  @media (max-width: 488px) {
+   max-height: 80vh;
+  }
+
+  @media (max-width: 420px) {
+    max-width: 300px;
+  }
+  
 }
 
 .close {
@@ -40,9 +53,20 @@
   justify-content: center;
   align-items: center;
 
+  @media (max-width: 488px) {
+    width: 35px;
+    height: 35px;
+    top: -50px;
+    right: 0;
+  }
+
   &::before {
     content: '✖';
     font-size: 14px;
+
+    @media (max-width: 488px) {
+      font-size: 12px;
+    }
   }
 }
 
@@ -51,12 +75,27 @@
   font-family: "Lugrasimo", cursive;
   font-size: 22px;
   font-weight: bold;
+
+  @media (max-width: 668px) {
+    font-size: 20px;
+    padding: 10px 15px;
+  }
+
+  @media (max-width: 420px) {
+    font-size: 18px;
+    padding: 7px 10px;
+  }
 }
 
 .content {
   height: calc(100% - 120px);
   overflow-y: auto;
   background-color: darken($white, 2%);
+  padding: 0 15px;
+
+  @media (max-width: 420px) {
+    padding: 0 10px;
+  }
 
   &::-webkit-scrollbar {
     width: 2px;
@@ -69,9 +108,16 @@
 }
 
 .info {
-  padding: 0 15px;
   color: $gray-font;
   margin: 10px 0;
+
+  @media (max-width: 668px) {
+    font-size: 14px;
+  }
+
+  @media (max-width: 420px) {
+    margin: 7px 0;
+  }
 
   span {
     color: $gray-font;
@@ -79,7 +125,13 @@
 }
 
 .components {
-  padding: 0 15px;
+  @media (max-width: 668px) {
+    font-size: 14px;
+  }
+
+  @media (max-width: 420px) {
+    font-size: 12px;
+  }
 
   & span:not(:last-child)::after {
     content: ', '
@@ -89,12 +141,15 @@
 .form {
   .field {
     font-weight: bold;
-    padding: 0 15px;
     margin: 10px 0;
+
+    @media (max-width: 420px) {
+      margin: 7px 0;
+    }
   }
 
   hr {
-    width: 90%;
+    width: 100%;
     background-color: $gray-light;
     margin: 0 auto 10px;
   }
@@ -105,8 +160,13 @@
     justify-content: center;
     position: absolute;
     bottom: 0;
-    padding: 15px;
+    padding: 15px 0;
+    margin-left: -15px;
     background: $white;
     border-radius: 0 0 15px 15px;
+
+    @media (max-width: 420px) {
+      margin-left: -10px;
+    }
   }
 }
