--- a/client/src/components/Card/Card.module.scss
+++ b/client/src/components/Card/Card.module.scss
@@ -54,7 +54,7 @@
     color: $dark-font;
     font-size: 26px;
     text-align: right;
-    padding-right: 5px;
+    padding: 0 5px;
 
     @media (max-width: 468px) {
       width: 70%;
