--- a/client/src/components/Sorting/Sorting.module.scss
+++ b/client/src/components/Sorting/Sorting.module.scss
@@ -46,6 +46,7 @@
   box-shadow: 0px 10px 20px $black;
   border-radius: 10px;
   overflow: hidden;
+  z-index: 100;
 
   @media (max-width: 468px) {
     margin-top: 0;
