feat(search): add search on backend

--- a/client/src/components/Card/Card.module.scss
+++ b/client/src/components/Card/Card.module.scss
@@ -55,6 +55,7 @@
     font-size: 26px;
     text-align: right;
     padding: 0 5px;
+    text-transform: capitalize;
 
     @media (max-width: 468px) {
       width: 70%;
