feat(modalWindow): implement displaying components for removing

--- a/client/src/components/ModalWindow/ModalWindow.module.scss
+++ b/client/src/components/ModalWindow/ModalWindow.module.scss
@@ -170,3 +170,14 @@
     }
   }
 }
+
+.subtitle {
+  font-weight: bold;
+  margin: 10px 0;
+}
+
+.line {
+  width: 100%;
+  background-color: $gray-light;
+  margin: 0 auto 10px;
+}
