--- a/client/src/pages/Basket/BasketItem/BasketItem.module.scss
+++ b/client/src/pages/Basket/BasketItem/BasketItem.module.scss
@@ -5,6 +5,25 @@
   justify-content: space-between;
   align-items: center;
   padding-right: 20px;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+.wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  @media (max-width: 768px) {
+    margin-bottom: 20px;
+
+    &:last-child {
+      width: 100%;
+    }
+  }
 }
 
 .image {
@@ -31,6 +50,10 @@
   h3 {
     margin-bottom: 8px;
     text-transform: capitalize;
+
+    @media (max-width: 560px) {
+      font-size: 16px;
+    }
   }
 
   .info {
@@ -39,6 +62,10 @@
     span {
       margin-right: 10px;
       color: $gray-font;
+
+      @media (max-width: 560px) {
+        font-size: 14px;
+      }
     }
   }
 
@@ -46,10 +73,20 @@
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 8px;
+
+    b {
+      @media (max-width: 560px) {
+        font-size: 14px;
+      }
+    }
   }
 
   .added__item {
     margin-right: 10px;
+
+    @media (max-width: 560px) {
+      font-size: 14px;
+    }
 
     &::before {
       content: '+';
@@ -60,10 +97,20 @@
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 8px;
+
+    b {
+      @media (max-width: 560px) {
+        font-size: 14px;
+      }
+    }
   }
 
   .removed__item {
     margin-right: 10px;
+
+    @media (max-width: 560px) {
+      font-size: 14px;
+    }
   }
 }
 
