--- a/client/src/components/Pagination/Pagination.module.scss
+++ b/client/src/components/Pagination/Pagination.module.scss
@@ -5,6 +5,10 @@
   display: flex;
   justify-content: center;
 
+  @media (max-width: 420px) {
+    padding: 10px 5px;
+  }
+
   ul {
     display: flex;
     flex-wrap: wrap;
@@ -21,6 +25,13 @@
     text-align: center;
     padding-top: 7px;
 
+    @media (max-width: 420px) {
+      width: 30px;
+      height: 30px;
+      padding-top: 2px;
+      margin: 5px 5px 0;
+    }
+
     &:hover {
       cursor: pointer;
     }
@@ -30,6 +41,10 @@
       width: 100%;
       height: 100%;
       color: $pink;
+
+      @media (max-width: 420px) {
+        font-size: 13px;
+      }
     }
     
   }
