--- a/client/src/components/Footer/Footer.module.scss
+++ b/client/src/components/Footer/Footer.module.scss
@@ -3,6 +3,10 @@
 .root {
   background-color: $orange;
   padding: 30px 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
 
   @media (max-width: 768px) {
     padding: 20px 0;
