--- a/client/src/pages/Basket/Basket.module.scss
+++ b/client/src/pages/Basket/Basket.module.scss
@@ -1,7 +1,7 @@
 @import '../../scss/all';
 
 .root {
-  padding: 10px 0;
+  padding: 10px 0 110px;
   min-height: calc(100vh - 226px);
 
   @media(max-width: 968px) {
@@ -14,6 +14,7 @@
 
   @media (max-width: 560px) {
     min-height: calc(100vh - 291px);
+    padding: 10px 0 120px;
   }
 
   @media (max-width: 468px) {
