--- a/client/src/pages/Main/Main.module.scss
+++ b/client/src/pages/Main/Main.module.scss
@@ -1,7 +1,11 @@
 @import '../../scss/all';
 
 .root {
-  margin-bottom: 20px;
+  padding-bottom: 110px;
+
+  @media (max-width: 768px) {
+    padding-bottom: 130px;
+  }
 }
 
 .top {
@@ -46,6 +50,48 @@
 
     @media (max-width: 468px) {
       height: 4px;
+    }
+  }
+}
+
+.errorInfo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  @media (max-width: 470px) {
+    margin-top: 40px;
+  }
+
+  &__title {
+    margin-bottom: 20px;
+    font-size: 28px;
+
+    @media (max-width: 768px) {
+      font-size: 24px;
+    }
+
+    @media (max-width: 470px) {
+      margin-bottom: 15px;
+      font-size: 20px;
+    }
+
+    @media (max-width: 360px) {
+      font-size: 18px;
+      margin-bottom: 10px;
+    }
+  }
+
+  &__text {
+    text-align: center;
+    font-size: 18px;
+
+    @media (max-width: 768px) {
+      font-size: 16px;
+    }
+
+    @media (max-width: 360px) {
+      font-size: 14px;
     }
   }
 }
