feat(pagination): stylize disabled buttons

--- a/client/src/components/Pagination/Pagination.module.scss
+++ b/client/src/components/Pagination/Pagination.module.scss
@@ -63,6 +63,16 @@
       background-color: $pink;
     }
 
+    .disabled.previous,
+    .disabled.next {
+      border-color: $gray-light;
+      cursor:default;
+      
+      a {
+        color: $gray-light;
+      }
+    }
+
     .disabled.previous:active,
     .disabled.next:active {
       background-color: transparent;
