feat(order): create layout for name, phone and time

--- a/client/src/components/PageTitle/PageTitle.module.scss
+++ b/client/src/components/PageTitle/PageTitle.module.scss
@@ -2,7 +2,7 @@
 
 .title {
   display: inline-block;
-  margin: 30px 0 50px;
+  margin: 30px 0;
   color: $dark-font;
 
   @media (max-width: 740px) {
