--- a/client/src/pages/Order/Order.module.scss
+++ b/client/src/pages/Order/Order.module.scss
@@ -1,10 +1,12 @@
 @import '../../scss/all';
 
 .form {
-  width: 50%;
+  width: 100%;
+  padding-bottom: 110px;
 }
 
 .info {
+  width: 50%;
   margin-bottom: 15px;
   position: relative;
 
@@ -150,5 +152,15 @@
 
   &:focus {
     border-color: $gray-dark;
+  }
+}
+
+.bottom {
+  font-size: 18px;
+  font-weight: bold;
+  text-align: right;
+
+  p {
+    margin-bottom: 10px;
   }
 }
