--- a/client/src/pages/Order/OrderError/OrderError.module.scss
+++ b/client/src/pages/Order/OrderError/OrderError.module.scss
@@ -1,4 +1,47 @@
+@import '../../../scss/_all';
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title {
+  color: $pink;
+
+  @media(max-width: 472px) {
+    font-size: 21px;
+  }
+}
+
+.subtitle,
+.message {
+  font-family: "Lugrasimo", cursive;
+
+  @media(max-width: 472px) {
+    font-size: 16px;
+    text-align: center;
+  }
+}
+
+.subtitle {
+  color: $dark-font;
+}
+
+.message {
+  color: $gray-font;
+}
+
+.image,
 .skeleton {
+  display: block;
   width: 128px;
   height: 128px;
+  margin: 20px 0;
+}
+
+.btnsBlock {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
 }
