feat(order): style and customize the order page

--- a/client/src/ui-kit/Select/Select.scss
+++ b/client/src/ui-kit/Select/Select.scss
@@ -8,11 +8,23 @@
   max-height: 300px;
   border-radius: 4px;
   position: relative;
+
+  @media(max-width: 840px) {
+    width: 70%;
+  }
+
+  @media(max-width: 560px) {
+    width: 100%;
+  }
 }
 
 .selectTitle {
   font-family: "Lugrasimo", cursive;
   color: $dark-font;
+
+  @media(max-width: 390px) {
+    font-size: 16px;
+  }
 }
 
 .customSelect{
@@ -26,6 +38,10 @@
       border-color: $gray-dark !important;
       border-radius: 0px !important;
       box-shadow: none !important;
+    }
+
+    @media(max-width: 390px) {
+      font-size: 14px !important;
     }
   }
 
@@ -55,6 +71,10 @@
     background-color: transparent !important;
     cursor: pointer !important;
 
+    @media(max-width: 390px) {
+      font-size: 14px !important;
+    }
+
     &--is-focused {
       background-color: $gray-light !important;
     }
@@ -65,11 +85,16 @@
   }
 }
 
-.errorBlock {
+.errorBlockSelect {
   font-size: 14px;
   font-family: "Lugrasimo", cursive;
   color: $pink;
   position: absolute;
   left: 10px;
   bottom: -15px;
+
+  @media(max-width: 390px) {
+    font-size: 12px;
+    bottom: -10px;
+  }
 }
