--- a/client/src/pages/Order/OrderForm/OrderForm.module.scss
+++ b/client/src/pages/Order/OrderForm/OrderForm.module.scss
@@ -10,6 +10,11 @@
   font-weight: bold;
   text-align: right;
 
+  @media(max-width: 560px) {
+    font-size: 16px;
+    margin: 20px 0;
+  }
+
   p {
     margin-bottom: 10px;
   }
