--- a/client/src/ui-kit/InputPhone/InputPhone.module.scss
+++ b/client/src/ui-kit/InputPhone/InputPhone.module.scss
@@ -5,15 +5,31 @@
   margin-bottom: 15px;
   position: relative;
 
+  @media(max-width: 840px) {
+    width: 70%;
+  }
+
+  @media(max-width: 560px) {
+    width: 100%;
+  }
+
   &__title {
     font-family: "Lugrasimo", cursive;
     color: $dark-font;
+
+    @media(max-width: 390px) {
+      font-size: 16px;
+    }
   }
 
   &__subtitle {
     font-size: 14px;
     font-family: "Lugrasimo", cursive;
     color: $gray-font;
+
+    @media(max-width: 390px) {
+      font-size: 12px;
+    }
   }
 
   &__input {
@@ -24,6 +40,10 @@
     color: $dark-font;
     font-size: 16px;
     background-color: $bg-form;
+
+    @media(max-width: 390px) {
+      font-size: 14px;
+    }
 
     &:focus {
       border-color: $gray-dark;
@@ -37,5 +57,10 @@
     position: absolute;
     left: 10px;
     bottom: -20px;
+
+    @media(max-width: 390px) {
+      font-size: 12px;
+      bottom: -15px;
+    }
   }
 }
