feat(UserOrder): create simple UserOrder component

--- a/client/src/scss/utils/_variables.scss
+++ b/client/src/scss/utils/_variables.scss
@@ -13,6 +13,8 @@ $gray-light:#d0d0d0;
 $gray-dark: #323232;
 $green-light: #33d51e;
 $green-dark: #198d09;
+$blue-light: #96d0f9;
+$blue-dark: #249cc5;
 
 $first-weight-price-box: #d31010;
 $second-weight-price-box: #f1c707;
