--- a/client/src/pages/User/User.module.scss
+++ b/client/src/pages/User/User.module.scss
@@ -10,3 +10,54 @@
   color: $dark-font;
   margin-bottom: 10px;
 }
+
+.errorInfo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 30px;
+  
+  @media (max-width: 470px) {
+    margin-top: 40px;
+  }
+
+  &__title {
+    margin-bottom: 20px;
+    font-size: 28px;
+
+    @media (max-width: 768px) {
+      font-size: 24px;
+    }
+
+    @media (max-width: 470px) {
+      margin-bottom: 15px;
+      font-size: 20px;
+    }
+
+    @media (max-width: 360px) {
+      font-size: 18px;
+      margin-bottom: 10px;
+    }
+  }
+
+  &__text {
+    text-align: center;
+    font-size: 18px;
+
+    @media (max-width: 768px) {
+      font-size: 16px;
+    }
+
+    @media (max-width: 360px) {
+      font-size: 14px;
+    }
+  }
+}
+
+.loaderWrapper {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
