--- a/client/src/scss/utils/_variables.scss
+++ b/client/src/scss/utils/_variables.scss
@@ -15,6 +15,8 @@ $green-light: #33d51e;
 $green-dark: #198d09;
 $blue-light: #96d0f9;
 $blue-dark: #249cc5;
+$yellow-dark: #9acd32;
+$yellow: #ffff00;
 
 $first-weight-price-box: #d31010;
 $second-weight-price-box: #f1c707;
