feat(User): create adaptive design

--- a/client/src/pages/User/User.module.scss
+++ b/client/src/pages/User/User.module.scss
@@ -1,7 +1,12 @@
 @import '../../scss/_all';
 
 .root {
-  padding-bottom: 90px;
+  padding-bottom: 120px;
+}
+
+.title {
+  margin-top: 0;
+  margin-bottom: 15px;
 }
 
 .historyTitle {
