--- a/client/src/pages/Admin/Admin.module.scss
+++ b/client/src/pages/Admin/Admin.module.scss
@@ -47,3 +47,60 @@
     color: $pink;
   }
 }
+
+.modalWin {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: $bg;
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &__header {
+    color: $white;
+    padding: 0 20px;
+    text-align: center;
+
+    @media (max-width: 768px) {
+      font-size: 22px;
+    }
+  }
+
+  &__warning {
+    color: red;
+  }
+
+  &__btnBlock {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-around;
+  }
+
+  &__btn {
+    width: 100px;
+  padding: 10px 0;
+  font-size: 16px;
+  font-weight: bold;
+  border: 3px solid transparent;
+  border-radius: 3px;
+  cursor: pointer;
+
+  @media (max-width: 768px) {
+    width: 80px;
+    padding: 7px 0;
+    font-size: 14px;
+  }
+
+  &:hover {
+    border: 3px solid $pink;
+  }
+
+  &:active {
+    transform: translate(2px, 2px);
+  }
+  }
+}
