--- a/client/src/components/PageTitle/PageTitle.module.scss
+++ b/client/src/components/PageTitle/PageTitle.module.scss
@@ -2,19 +2,17 @@
 
 .title {
   display: inline-block;
-  margin: 30px 0;
+  margin: 0;
   color: $dark-font;
 
   @media (max-width: 740px) {
     font-size: 24px;
     line-height: 28px;
-    margin: 25px 0 40px;
   }
 
   @media (max-width: 468px) {
     font-size: 20px;
     line-height: 22px;
-    margin: 25px 0;
   }
 
   &::after {
