--- a/client/src/pages/Main/Main.module.scss
+++ b/client/src/pages/Main/Main.module.scss
@@ -61,6 +61,7 @@
 }
 
 .items {
+  margin-top: 30px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(1, 1fr);
