--- a/client/src/pages/Admin/Admin.module.scss
+++ b/client/src/pages/Admin/Admin.module.scss
@@ -19,19 +19,55 @@
   &__content {
     margin: 10px 0;
     width: 80%;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
+
+    @media(max-width: 786px) {
+      width: 100%;
+    }
   }
 
   &__btnsBlock {
     display: flex;
     justify-content: space-between;
+
+    @media(max-width: 468px) {
+      flex-direction: column-reverse;
+      height: 105px;
+    }
+
+    @media(max-width: 389px) {
+      height: 90px;
+    }
   }
 
   &__list {
+    width: 100%;
     margin: 10px 0;
     text-align: center;
+    border: 0;
+
+    @media(max-width: 468px) {
+      font-size: 14px;
+    }
+    
+    & thead {
+      background: darken($white,20%);
+
+      & th {
+        padding: 10px 0;
+      }
+    }
+
+    & tbody td {
+      padding: 5px 0;
+    }
+
+    & tbody tr:nth-child(odd){
+      background: darken($white,10%);
+    }
+
+    & tbody tr:nth-child(even){
+      background: darken($white, 5%);
+    }
   }
 }
 
@@ -73,7 +109,15 @@
   }
 
   &__warning {
-    color: red;
+    color: $pink;
+    text-align: center;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: bold;
+
+    @media (max-width: 768px) {
+      font-size: 16px;
+    }
   }
 
   &__btnBlock {
@@ -104,5 +148,69 @@
   &:active {
     transform: translate(2px, 2px);
   }
+  }
+}
+
+.formWrapper {
+  margin: 20px 0;
+  color: $dark-font;
+}
+
+.form {
+  &__input {
+    padding: 5px 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    border-radius: 3px;
+    border: 1px solid $gray-light;
+    width: 100%;
+    height: 35px;
+
+    @media(max-width: 468px) {
+      height: 30px;
+      font-size: 14px;
+    }
+
+    &:focus {
+      border: 1px solid $gray-dark;
+    }
+
+    &::placeholder {
+      color: $gray-font;
+    }
+  }
+
+  &__errorMessage {
+    font-family: "Lugrasimo", cursive;
+    color: $pink;
+    font-size: 14px;
+    padding: 5px;
+  }
+
+  &__btn {
+    width: 130px;
+    height: 35px;
+    background-color: transparent;
+    border-radius: 3px;
+    border: 1px solid $gray-light;
+    margin-right: 10px;
+    cursor: pointer;
+    transition: .3s ease;
+
+    @media(max-width: 468px) {
+      width: 100px;
+      height: 30px;
+      font-size: 12px;
+    }
+
+    &:hover {
+      background-color: $pink-light;
+      border: 1px solid $pink-light;
+      color: $white;
+    }
+
+    &:active {
+      background-color: $pink;
+    }
   }
 }
