feat(ShawarmaEdit): implement logic to indicate whether shavarma is new

--- a/client/src/pages/Admin/Admin.module.scss
+++ b/client/src/pages/Admin/Admin.module.scss
@@ -199,11 +199,29 @@
     cursor: pointer;
   }
 
+  &__checkbox {
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    margin-left: 20px;
+    margin-right: auto;
+    position: relative;
+    top: 5px;
+    
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
   &__errorMessage {
     font-family: "Lugrasimo", cursive;
     color: $pink;
     font-size: 14px;
     padding: 5px;
+  }
+
+  &__btnsWrapper {
+    margin-top: 20px;
   }
 
   &__btn {
