--- a/client/src/pages/Admin/Admin.module.scss
+++ b/client/src/pages/Admin/Admin.module.scss
@@ -204,7 +204,7 @@
     height: 20px;
     display: inline-block;
     margin-left: 20px;
-    margin-right: auto;
+    margin-right: 20px;
     position: relative;
     top: 5px;
     
