feat(CreateShawarmaProperties): implement component CreateShawarmaProperties

--- a/client/src/pages/Admin/Admin.module.scss
+++ b/client/src/pages/Admin/Admin.module.scss
@@ -298,3 +298,10 @@ input::-webkit-file-upload-button {
     font-size: 12px;
   }
 }
+
+.emptyPropertyMessage {
+  font-family: "Lugrasimo", cursive;
+  color: $dark-font;
+  margin: 10px 0;
+  text-align: center;
+}
