--- a/client/src/scss/libs/_normalize.scss
+++ b/client/src/scss/libs/_normalize.scss
@@ -10,6 +10,8 @@
 }
 
 html {
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   user-select: none;
