--- a/client/src/scss/libs/_normalize.scss
+++ b/client/src/scss/libs/_normalize.scss
@@ -22,6 +22,15 @@ body {
   -webkit-font-smoothing: antialiased;
   color: $black;
   background-color: $bg;
+  
+  &::-webkit-scrollbar {
+    width: 2px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 2px;
+    background: $pink;
+  }
 }
 
 a,
