feat: create responsive design for admin panel

--- a/client/src/pages/Admin/Admin.module.scss
+++ b/client/src/pages/Admin/Admin.module.scss
@@ -61,6 +61,10 @@
     @media(max-width: 468px) {
       font-size: 14px;
     }
+
+    @media(max-width: 356px) {
+      font-size: 12px;
+    }
     
     & thead {
       background: darken($white,20%);
