refactor: replacr Lucrasymo font to Comfortaa

--- a/client/src/components/Card/Card.module.scss
+++ b/client/src/components/Card/Card.module.scss
@@ -55,7 +55,7 @@
 
   &__text {
     align-self: flex-end;
-    font-family: "Lugrasimo", cursive;
+    font-family: "Comfortaa", cursive;
     color: $dark-font;
     font-size: 26px;
     text-align: right;
