--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -41,7 +41,7 @@
   }
 
   &__title {
-    font-family: "Lugrasimo", cursive;
+    font-family: "Comfortaa", cursive;
     color: $dark-font;
     font-size: 36px;
     text-transform: uppercase;
