--- a/client/src/components/ModalWindow/ModalWindow.module.scss
+++ b/client/src/components/ModalWindow/ModalWindow.module.scss
@@ -71,7 +71,7 @@
 
 .title {
   padding: 15px 15px 10px;
-  font-family: "Lugrasimo", cursive;
+  font-family: "Comfortaa", cursive;
   font-size: 22px;
   font-weight: bold;
 
