--- a/client/src/pages/User/User.module.scss
+++ b/client/src/pages/User/User.module.scss
@@ -11,7 +11,7 @@
 
 .historyTitle {
   font-size: 18px;
-  font-family: "Lugrasimo", cursive;
+  font-family: "Comfortaa", cursive;
   color: $dark-font;
   margin-bottom: 10px;
 }
