--- a/client/src/ui-kit/Select/Select.scss
+++ b/client/src/ui-kit/Select/Select.scss
@@ -19,7 +19,7 @@
 }
 
 .selectTitle {
-  font-family: "Lugrasimo", cursive;
+  font-family: "Comfortaa", cursive;
   color: $dark-font;
 
   @media(max-width: 390px) {
@@ -87,7 +87,7 @@
 
 .errorBlockSelect {
   font-size: 14px;
-  font-family: "Lugrasimo", cursive;
+  font-family: "Comfortaa", cursive;
   color: $pink;
   position: absolute;
   left: 10px;
