--- a/client/src/ui-kit/TextArea/TextArea.scss
+++ b/client/src/ui-kit/TextArea/TextArea.scss
@@ -19,7 +19,7 @@
 }
 
 .textTitle {
-  font-family: "Lugrasimo", cursive;
+  font-family: "Comfortaa", cursive;
   color: $dark-font;
 
   @media(max-width: 390px) {
@@ -29,7 +29,7 @@
 
 .textSubtitle {
   font-size: 14px;
-  font-family: "Lugrasimo", cursive;
+  font-family: "Comfortaa", cursive;
   color: $gray-font;
 
   @media(max-width: 390px) {
@@ -39,7 +39,7 @@
 
 .errorBlockTextArea {
   font-size: 14px;
-  font-family: "Lugrasimo", cursive;
+  font-family: "Comfortaa", cursive;
   color: $pink;
   position: absolute;
   left: 10px;
