--- a/client/src/components/AdminOrder/AdminOrder.module.scss
+++ b/client/src/components/AdminOrder/AdminOrder.module.scss
@@ -15,7 +15,7 @@
 
 .mainInfo__list__item, 
 .details__elemList__item {
-  font-family: "Lugrasimo", cursive;
+  font-family: "Comfortaa", cursive;
   color: $dark-font;
   font-size: 16px;
 
