--- a/client/src/pages/Login/Login.module.scss
+++ b/client/src/pages/Login/Login.module.scss
@@ -25,7 +25,7 @@
 .title {
   margin: 10px 0;
   text-align: center;
-  font-family: "Lugrasimo", cursive;
+  font-family: "Comfortaa", cursive;
   color: $dark-font;
 
   @media(max-width: 468px) {
@@ -82,7 +82,7 @@
 
 .errorBlock {
   font-size: 14px;
-  font-family: "Lugrasimo", cursive;
+  font-family: "Comfortaa", cursive;
   color: $pink;
   margin-top: 5px;
 
