--- a/client/src/pages/Order/OrderError/OrderError.module.scss
+++ b/client/src/pages/Order/OrderError/OrderError.module.scss
@@ -16,7 +16,7 @@
 
 .subtitle,
 .message {
-  font-family: "Lugrasimo", cursive;
+  font-family: "Comfortaa", cursive;
 
   @media(max-width: 472px) {
     font-size: 16px;
