--- a/client/src/ui-kit/Input/Input.scss
+++ b/client/src/ui-kit/Input/Input.scss
@@ -14,7 +14,7 @@
   }
 
   &__title {
-    font-family: "Lugrasimo", cursive;
+    font-family: "Comfortaa", cursive;
     color: $dark-font;
 
     @media(max-width: 390px) {
@@ -24,7 +24,7 @@
 
   &__subtitle {
     font-size: 14px;
-    font-family: "Lugrasimo", cursive;
+    font-family: "Comfortaa", cursive;
     color: $gray-font;
 
     @media(max-width: 390px) {
@@ -52,7 +52,7 @@
 
   .errorBlock {
     font-size: 14px;
-    font-family: "Lugrasimo", cursive;
+    font-family: "Comfortaa", cursive;
     color: $pink;
     position: absolute;
     left: 10px;
